Implemented bible API with full support :)
Implemented feed api

Implemented email signup

Started work on home page (wall)

Updated post signup profile to include title for pastors.

Finished modal to read scripture on sermon study page

Refactored and fixed Validator class

--- a/index.yaml
+++ b/index.yaml
@@ -40,3 +40,16 @@ indexes:
   - name: sermon_key
   - name: created_at
     direction: desc
+
+- kind: User
+  properties:
+  - name: __key__
+  - name: first_name
+  - name: last_name
+
+- kind: User
+  properties:
+  - name: __key__
+  - name: first_name
+  - name: last_name
+  - name: title
