Fixed email signup.
Implemented full-text search for user name, sermon title and church name.

Completed creating ad-hoc sermon notes.

Implemented my notes view.

Refactored scripture view from search to directive. Fixed bible search.

Fixed sideToggle error on page switch. Refactor login to service and hides sidebar when state is changed.

Replace mdtoast alert with bootstrap notify

Create directive to render user name and as well directly to auto-save notes.

--- a/index.yaml
+++ b/index.yaml
@@ -41,6 +41,12 @@ indexes:
   - name: created_at
     direction: desc
 
+- kind: SermonNote
+  properties:
+  - name: created_by
+  - name: created_at
+    direction: desc
+
 - kind: User
   properties:
   - name: __key__
