Updated version id to auto. Migrated login and logout routes to UserHandler. Moved Facebook sdk code from index.html to config.js so it's resolved (loaded) for the main state is activated. Added ng-file-upload (file upload for picture is yet to be implemented)
Added function to resolve user image or display avatar. Added male and female avatar for user picture.
Fixed some quicks in styling for welcome page especially modals and on mobile devices.

Fixed user-session resolve issues in app.js.

Refactored authService.
Fixed Facebook and login/signup implementation

Refactored bibleService

Update scripture directive, to reduce the same view for modal and non-modal views and share code.

Complete login and signup modals, including email/facebook signup/login.
Added check to see if user is currently connected via Facebook and prompt user to login to app.

Completed user settings view.

Completed note creation,views.

Implemented table view for sermons browse

--- a/index.yaml
+++ b/index.yaml
@@ -29,6 +29,13 @@ indexes:
   - name: created_at
     direction: desc
 
+- kind: Sermon
+  properties:
+  - name: church_key
+  - name: publish
+  - name: created_at
+    direction: desc
+
 - kind: SermonComment
   properties:
   - name: reply_to
