# Client Added sweet alert js Added gray background for inner pages Update styles for text editor Refactored likeSermon into shared function in userService. Updated feed directive to show comments less than 5 Reimplemented auto save to save notes every 5 secs if there is a change, instead of on every change. Made some ui changes to the create note view. Update to notes view to show text when user has no notes saved. UI updates to sermon create view. UI updates to sermon view. Refactored userService. Fixed bug with Facebook user. We were only sending email and access_token, but we now send all the user info, just in-case
# Server
Update app.yaml
  Added https support
Added tasks module to process background tasks, created queue.yam

--- a/app.yaml
+++ b/app.yaml
@@ -1,5 +1,5 @@
 application: scripturedin
-version: auto
+version: v1-0-5
 runtime: python27
 api_version: 1
 threadsafe: yes
@@ -9,33 +9,34 @@ handlers:
   static_files: favicon.ico
   upload: favicon\.ico
 
-- url: /task//.*
+- url: /task/.*
   script: main.app
   login: admin
 
 - url: /api/.*
   script: main.app
+  secure: always
 
 #uncomment for local dev
 - url: /
-  static_files: app/dev/index.html
-  upload: app
-
-- url: (.*)
-  static_files: app/dev\1
-  upload: app
-
-#uncomment for prod
-#- url: /
-#  static_files: app/prod/index.html
+#  static_files: app/dev/index.html
 #  upload: app
-#
 #
 #- url: (.*)
-#  static_files: app/prod\1
+#  static_files: app/dev\1
 #  upload: app
-#
-#
+
+#uncomment for prod
+- url: /
+  static_files: app/prod/index.html
+  upload: app
+  secure: always
+
+- url: (.*)
+  static_files: app/prod\1
+  upload: app
+  secure: always
+
 
 libraries:
 - name: webapp2
