fixed bug with bible-service injection, removed unused $scope variable.
Major fix on bible query api and scripture card.
+ Back rewrite to handle translations with headers and very different response formats.
+ Updated UI to display those headings as well.
+ Removed some versions

--- a/queue.yaml
+++ b/queue.yaml
@@ -1,5 +1,5 @@
 queue:
-# default task queue to run background jobs
+# default task queue to run background jobs.
 - name: default-tasks
   target: tasks
   rate: 5/s
