--- a/app.yaml
+++ b/app.yaml
@@ -18,24 +18,24 @@ handlers:
   secure: always
 
 #uncomment for local dev
-- url: /
-  static_files: app/dev/index.html
-  upload: app
-
-- url: (.*)
-  static_files: app/dev\1
-  upload: app
-
-#uncomment for prod
 #- url: /
-#  static_files: app/prod/index.html
+#  static_files: app/dev/index.html
 #  upload: app
-#  secure: always
 #
 #- url: (.*)
-#  static_files: app/prod\1
+#  static_files: app/dev\1
 #  upload: app
-#  secure: always
+
+#uncomment for prod
+- url: /
+  static_files: app/prod/index.html
+  upload: app
+  secure: always
+
+- url: (.*)
+  static_files: app/prod\1
+  upload: app
+  secure: always
 
 libraries:
 - name: webapp2
