--- a/app/package.json
+++ b/app/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "devDependencies": {
     "clean-dir": "^1.0.3",
-    "del": "^2.2.0",
+    "del": "^2.2.2",
     "grunt": "~0.4.5",
     "grunt-bower-concat": "^0.6.0",
     "grunt-contrib-jshint": "~0.10.0",
@@ -11,13 +11,14 @@
     "grunt-contrib-uglify": "^0.8.0",
     "grunt-csssplit": "^0.4.0",
     "gulp": "^3.9.0",
-    "gulp-angular-templatecache": "^1.8.0",
-    "gulp-concat": "^2.6.0",
+    "gulp-angular-templatecache": "^1.9.1",
+    "gulp-clean-css": "^2.3.2",
+    "gulp-concat": "^2.6.1",
     "gulp-dest-clean": "^0.1.0",
-    "gulp-minify-css": "^1.2.2",
+    "gulp-minify-css": "^1.2.4",
     "gulp-ng-annotate": "^1.1.0",
     "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^1.5.1",
+    "gulp-uglify": "^1.5.4",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.19",
     "karma-chrome-launcher": "^0.2.2",
