--- a/server/app.yaml
+++ b/server/app.yaml
@@ -18,12 +18,12 @@ handlers:
   secure: always
 
 - url: /
-  static_files: app/index.html
+  static_files: ../app/dev/index.html
   upload: app
   secure: always
 
 - url: (.*)
-  static_files: app\1
+  static_files: ../app/dev\1
   upload: app
   secure: always
 
