--- a/web/package.json
+++ b/web/package.json
@@ -1,77 +1,79 @@
 {
-    "name": "scripturedin",
-    "version": "0.2.0",
-    "description": "social platform for christians to engage with God's works and one another",
-    "main": "src/app/index.js",
-    "scripts": {
-        "test": "karma start",
-        "start": "node node_modules/.bin/webpack-dev-server --content-base src",
-        "build": "rimraf dist  && NODE_ENV=production node node_modules/.bin/webpack --progress && hs -p 9000"
-    },
-    "author": "Tola Anjorin",
-    "devDependencies": {
-        "@types/node": "^7.0.4",
-        "angular-mocks": "^1.6.1",
-        "awesome-typescript-loader": "^3.0.0-beta.18",
-        "babel": "^4.0.2",
-        "babel-core": "^6.7.7",
-        "babel-loader": "^6.2.4",
-        "babel-preset-es2015": "^6.6.0",
-        "babel-preset-stage-2": "^6.5.0",
-        "babelify": "^5.0.3",
-        "css-loader": "^0.23.1",
-        "exports-loader": "^0.6.3",
-        "expose-loader": "^0.7.1",
-        "extract-text-webpack-plugin": "^1.0.1",
-        "file-loader": "^0.8.5",
-        "html-loader": "^0.4.3",
-        "http-server": "^0.9.0",
-        "jasmine": "2.4.1",
-        "jasmine-core": "2.4.1",
-        "karma": "1.1.0",
-        "karma-jasmine": "1.0.2",
-        "karma-phantomjs-launcher": "1.0.1",
-        "karma-sourcemap-loader": "0.3.7",
-        "karma-spec-reporter": "0.0.26",
-        "karma-webpack": "1.7.0",
-        "less": "^2.7.2",
-        "less-loader": "^2.2.3",
-        "ng-annotate-loader": "^0.1.1",
-        "ng-annotate-webpack-plugin": "^0.1.3",
-        "ngtemplate-loader": "^1.3.1",
-        "object-assign": "^4.1.0",
-        "raw-loader": "^0.5.1",
-        "required-loader": "^1.0.0",
-        "source-map-loader": "^0.1.6",
-        "style-loader": "^0.13.1",
-        "url-loader": "^0.5.7",
-        "webpack": "^1.14.0",
-        "webpack-dev-server": "^1.16.3",
-        "webpack-stream": "^3.1.0"
-    },
-    "dependencies": {
-        "angular": "^1.6.1",
-        "angular-animate": "^1.6.1",
-        "angular-aria": "^1.6.1",
-        "angular-loading-bar": "^0.9.0",
-        "angular-material": "^1.1.3",
-        "angular-messages": "^1.6.1",
-        "angular-sanitize": "^1.6.1",
-        "angular-ui-bootstrap": "^2.0.0",
-        "angular-ui-router": "^1.0.0-rc.1",
-        "angular-local-storage": "^0.5.2",
-        "material-shadows": "^2.0.1",
-        "ng-redux": "^3.4.0-beta.1",
-        "normalizr": "^3.1.0",
-        "redux": "^3.6.0",
-        "redux-thunk": "^2.2.0",
-        "typescript": "^2.1.5",
-        "lodash": "^4.14.1",
-        "moment": "^2.14.1",
-        "material-design-iconic-font": "2",
-        "ng-table": "^1.0.0",
-        "bootstrap": "^3.3.7",
-        "dynamic-bind-html": "^1.0.1"
-
-    }
+  "name": "scripturedin",
+  "version": "0.2.0",
+  "description": "social platform for christians to engage with God's works and one another",
+  "main": "src/app/index.js",
+  "scripts": {
+    "test": "karma start",
+    "start": "node node_modules/.bin/webpack-dev-server --content-base src",
+    "build": "rimraf dist  && NODE_ENV=production node node_modules/.bin/webpack --progress && hs -p 9000"
+  },
+  "author": "Tola Anjorin",
+  "devDependencies": {
+    "@types/node": "^7.0.4",
+    "angular-mocks": "^1.6.1",
+    "awesome-typescript-loader": "^3.0.0-beta.18",
+    "babel": "^4.0.2",
+    "babel-core": "^6.7.7",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-stage-2": "^6.5.0",
+    "babelify": "^5.0.3",
+    "css-loader": "^0.23.1",
+    "exports-loader": "^0.6.3",
+    "expose-loader": "^0.7.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
+    "html-loader": "^0.4.3",
+    "http-server": "^0.9.0",
+    "imports-loader": "^0.7.1",
+    "jasmine": "2.4.1",
+    "jasmine-core": "2.4.1",
+    "karma": "1.1.0",
+    "karma-jasmine": "1.0.2",
+    "karma-phantomjs-launcher": "1.0.1",
+    "karma-sourcemap-loader": "0.3.7",
+    "karma-spec-reporter": "0.0.26",
+    "karma-webpack": "1.7.0",
+    "less": "^2.7.2",
+    "less-loader": "^2.2.3",
+    "ng-annotate-loader": "^0.1.1",
+    "ng-annotate-webpack-plugin": "^0.1.3",
+    "ngtemplate-loader": "^1.3.1",
+    "object-assign": "^4.1.0",
+    "raw-loader": "^0.5.1",
+    "required-loader": "^1.0.0",
+    "source-map-loader": "^0.1.6",
+    "style-loader": "^0.13.1",
+    "svg-url-loader": "^2.0.2",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.14.0",
+    "webpack-dev-server": "^1.16.3",
+    "webpack-stream": "^3.1.0"
+  },
+  "dependencies": {
+    "angular": "^1.6.1",
+    "angular-animate": "^1.6.1",
+    "angular-aria": "^1.6.1",
+    "angular-loading-bar": "^0.9.0",
+    "angular-local-storage": "^0.5.2",
+    "angular-material": "^1.1.3",
+    "angular-messages": "^1.6.1",
+    "angular-sanitize": "^1.6.1",
+    "angular-ui-bootstrap": "^2.0.0",
+    "angular-ui-router": "^1.0.0-rc.1",
+    "bootstrap": "^3.3.7",
+    "dynamic-bind-html": "^1.0.1",
+    "jquery": "^3.2.1",
+    "lodash": "^4.14.1",
+    "material-design-iconic-font": "2",
+    "material-shadows": "^2.0.1",
+    "moment": "^2.14.1",
+    "ng-redux": "^3.4.0-beta.1",
+    "ng-table": "^1.0.0",
+    "normalizr": "^3.1.0",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
+    "typescript": "^2.1.5"
+  }
 }
